add header + css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../odin-landing-page/style.css"/>
     <title>Odin Landing Page</title>
 </head>
 <body>
-    
+    <header>
+        <h1 id="header-logo">Odin</h1>
+
+        <ul class="header-link">
+            <li>History</li>
+            <li>Quotes</li>
+            <li>About</li>
+        </ul>
+    </header>
+
 </body>
 </html>
