--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <header>
         <h1 id="header-logo">Odin</h1>
 
-        <ul class="header-link">
-            <li>History</li>
-            <li>Quotes</li>
-            <li>About</li>
-        </ul>
+        <nav class="header-link">
+           <li>History</li> 
+           <li>Quotes </li> 
+           <li>About</li> 
+           
+            
+        </nav>
     </header>
 
 </body>
