finish top section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
            <li>Quotes </li> 
            <li>About</li>            
         </nav>
+
     </header>
 
+    <section class="hero-section">
+        <div class="hero-items">
+            <h1 id="odin-intro">Odin - The Godfather</h1>
+            <p>Odin (Old Norse: Óðinn) is the god of wisdom, poetry, death, divination, and magic in Norse mythology. 
+            </p>
+            <button class="learn-more">Learn more</button>
+        </div>
+        
+        <img id="odin-img" src="../Downloads/odin.jpg">
+        
+
+    </section>
 </body>
 </html>
