finish information section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
         </div>
         
         <img id="odin-img" src="../Downloads/odin.jpg">
+
+    </section>
+    <h1 id="odin-information">Information about Odin</h1>
+    <section class="information-section">
         
+        <figure>
+            <img id="odin-wanderer" src="../Downloads/odin-wanderer.jpg">
+            <figcaption>Odin depicted as wanderer.</figcaption>
+        </figure>
+        <figure>
+            <img id="odin-king" src="../Downloads/odin-king.jpg">
+            <figcaption>Odin depicted as king.</figcaption>
+        </figure>
+        <figure>
+            <img id="odin-ravens" src="../Downloads/odin-ravens.jpg">
+            <figcaption>Odin depicted with his ravens.</figcaption>
+        </figure>
 
     </section>
 </body>
