finish quote section html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     <h1 id="odin-information">Information about Odin</h1>
     <section class="information-section">
-        
+
         <figure>
             <img id="odin-wanderer" src="../Downloads/odin-wanderer.jpg">
             <figcaption>Odin depicted as wanderer.</figcaption>
@@ -46,6 +46,16 @@
             <figcaption>Odin depicted with his ravens.</figcaption>
         </figure>
 
+    </section>
+    <section class="quote-section">
+        <p>
+            “It is a pity that there are no big creatures to prey on humanity.<br>
+             If there were enough dragons and rocs, perhaps mankind would turn its might against them. <br>
+             Unfortunately man is preyed upon by microbes, which are too small to be appreciated.”
+        </p>
+        <p>
+            -Odin, God of wisdom, poetry, death, divination and magic
+        </p>
     </section>
 </body>
 </html>
