finish quote section html

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
     </section>
     <section class="quote-section">
-        <p>
+        <p id="odin-quote">
             “It is a pity that there are no big creatures to prey on humanity.<br>
              If there were enough dragons and rocs, perhaps mankind would turn its might against them. <br>
              Unfortunately man is preyed upon by microbes, which are too small to be appreciated.”
         </p>
-        <p>
+        <p id="odin-quote-author">
             -Odin, God of wisdom, poetry, death, divination and magic
         </p>
     </section>
