finish bottom section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="odin-intro">Odin - The Godfather</h1>
             <p>Odin (Old Norse: Óðinn) is the god of wisdom, poetry, death, divination, and magic in Norse mythology. 
             </p>
-            <button class="learn-more">Learn more</button>
+            <button class="learn-more-top">Learn more</button>
         </div>
         
         <img id="odin-img" src="../Downloads/odin.jpg">
@@ -47,6 +47,7 @@
         </figure>
 
     </section>
+
     <section class="quote-section">
         <p id="odin-quote">
             “It is a pity that there are no big creatures to prey on humanity.<br>
@@ -56,6 +57,15 @@
         <p id="odin-quote-author">
             -Odin, God of wisdom, poetry, death, divination and magic
         </p>
+    </section>
+
+    <section class="learn-more-section">
+        <div class="blue-box">
+            <h2 id="call-to-action">Call to action! It's time!</h2>
+            <p id="learn-more-text">If you want to learn more about Odin, click the button right over there!</p>
+            <button class="learn-more-bottom">Learn more</button>
+        </div>
+        
     </section>
 </body>
 </html>
