--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
         </div>
         
     </section>
+
+    <footer>
+        <h3>Copyright &copy; The Odin Project </h3>
+    </footer>
 </body>
 </html>
